--- a/src/style.css
+++ b/src/style.css
@@ -3,4 +3,5 @@
     padding: 0;
     margin: 0;
     background-color: rgb(22, 22, 22);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
